# VD

./: .gitignore
cv1/: data_processed.csv  data_raw  process.py  weight.plt
cv10/: Cargo.toml  NOTES.md
cv10/src/: main.rs
cv11/: NOTES.md
cv2/: main.py
cv3/: main.py
cv3_shepard/: main.py  shepard.py
cv4/: CMakeLists.txt  main.cpp  main.py
cv4/cpp/: CMakeLists.txt  main.cpp
cv5/: NOTES.md
cv6/: NOTES.md  TG_STAID000027.txt  data_2000.txt  data_2010.txt  data_2020.txt  main.py
cv7/: NOTES.md
cv8/: CMakeLists.txt  NOTES.md
cv8/volume/: CellHit.h  aabb.cpp  aabb.h  camera.cpp  camera.h  cell.cpp  cell.h  intersection.cpp  intersection.h  main.cpp  matrix4x4.cpp  matrix4x4.h  ray.h  stdafx.h  utils.h  vector3.cpp  vector3.h  volume.cpp  volume.h
cv9/: CMakeLists.txt  Grid.cpp  Grid.h  GridCell.cpp  GridCell.h  GridPoint.cpp  GridPoint.h  NOTES.md  Options.cpp  Options.h  Particle.h  defines.cpp  defines.h  main.cpp  process_all.cpp  test.cpp
